# coin-watcher

./: .gitignore  Cargo.toml  README.md  config.yml
src/: config.rs  lib.rs  main.rs  state_manager.rs
