[package]
name = "coin-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
console-subscriber = "0.1.8"
env_logger = "0.10.0"
iota-client = { version = "1.3.0" }
log = "0.4.17"
serde = { version="1", features = ["derive"] }
serde_yaml = "0.9.17"
tokio = { version = "1.24.2", features = ["full"]}

